# hash-index

./: .gitignore  Cargo.toml  README.md  perf.data  perf.data.old
benches/: bench_main.rs
benches/benchmarks/: bench_conflict_lca.rs  bench_conflict_table.rs  bench_fnv_hash.rs  bench_fnv_optimized_hash.rs  bench_fst.rs  bench_hash.rs  bench_kmer_hash.rs  bench_xxhash.rs  mod.rs
data/: test.csv
scripts/: agg2json.py  agg2sequencecounts.py  analysis-pipeline.sh  bench_hash.sh  bench_max_items_per_bucket.sh  bench_max_items_per_bucket_swissprot.sh
src/: errors.rs  kmer.rs  lib.rs  main.rs
src/benches/: bench_hash_conflicts.rs  bench_hash_dispersion.rs  bench_hash_dispersion_swissprot.rs  bench_max_items_per_bucket.rs  bench_max_items_per_bucket_swissprot.rs  mod.rs
src/commands/: buildindex.rs  loadindex.rs  mod.rs
src/hash/: fnv_1a_hash.rs  kmer_hash.rs  mod.rs  xxhash.rs
src/index/: conflict_table.rs  functional_table.rs  funnel_table.rs  hash_table.rs  index.rs  lca_table.rs  mod.rs
src/serialization/: ec_number.rs  go_term.rs  interpro_entry.rs  mod.rs  uniprot_id.rs
