[package]
name = "hash_index"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
structopt = "0.3.23"
csv = "1.1.2"
fnv = "1.0.7"
bit-vec = "0.6.3"
binary_rw = "1.3.2"
rand = "0.8.5"
chrono = "0.4"
bincode = "1.3.3"
serde = { version = "1.0.63", features = ["derive"] }
xxhash-rust = { version = "0.8.5", features = ["const_xxh32"] }

[dev-dependencies]
criterion = "0.3"
fst = "0.3.5"

[[bench]]
name = "bench_main"
harness = false

[profile.release]
debug = 1

[rust]
debuginfo-level = 1
